# prexel-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy_heroku.yml  perxel-server-heroku.yml
eval/: Cargo.toml  README.md  commands
eval/src/: _ignore.rs  cli.rs  colored.rs  custom_function.rs  eval_expr.rs  lib.rs  list.rs  main.rs  repl.rs  style.rs  writer.rs
eval/src/cmd/: commands.rs  error.rs  mod.rs
eval/src/cmd/commands/: context.rs  eval.rs  mod.rs  run.rs
eval/src/collections/: carray.rs  mod.rs
eval/src/commands/: context.rs  eval.rs  mod.rs  run.rs
eval/src/console/: console_key.rs  mod.rs
eval/src/console/windows/: mod.rs
eval/src/repl/: mod.rs  repl.rs  repl_writer.rs  theme.rs
math_engine/: Cargo.toml  README.md
math_engine/examples/: big_decimal.rs  logical_ops.rs
math_engine/src/: context.rs  error.rs  evaluator.rs  function.rs  lib.rs  main.rs  num.rs  token.rs  tokenizer.rs
math_engine/src/complex/: mod.rs
math_engine/src/decimal/: decimal_ex.rs  decimal_ext.rs  decimal_math.rs  mod.rs
math_engine/src/ops/: checked.rs  mod.rs  unchecked.rs
math_engine/src/random/: mod.rs
math_engine/src/utils/: char_string.rs  gamma.rs  ignore_case_str.rs  ignore_case_string.rs  lazy.rs  mod.rs  option_ext.rs  static_store.rs  string_tokenizer.rs  untyped.rs
math_engine/src/utils/extensions/: iterator_ext.rs  mod.rs  str_ext.rs
math_eval/: Cargo.toml
math_eval/src/: main.rs
math_eval/src/console/: console_color.rs  keycode.rs
prexel/: Cargo.toml  README.md
prexel-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
prexel-server/scripts/: docker-run.sh
prexel-server/src/: main.rs
prexel-server/src/context/: binary_context.rs  mod.rs
prexel-server/src/endpoints/: mod.rs
prexel-server/src/eval/: mod.rs
prexel-server/src/evaluator/: mod.rs
prexel-server/src/middlewares/: mod.rs  rate_limiter.rs
prexel-server/src/models/: eval_expression.rs  eval_result.rs  mod.rs
prexel-server/src/services/: evaluator.rs  info.rs  mod.rs
prexel/benches/: trait_object_vs_generic.rs
prexel/examples/: big_decimal.rs  logical_ops.rs
prexel/src/: context.rs  descriptions.rs  error.rs  evaluator.rs  function.rs  lib.rs  num.rs  token.rs  tokenizer.rs
prexel/src/binary/: mod.rs
prexel/src/complex/: mod.rs
prexel/src/decimal/: decimal_ext.rs  mod.rs
prexel/src/numeric_traits/: mod.rs
prexel/src/ops/: checked.rs  mod.rs  unchecked.rs
prexel/src/utils/: approx.rs  gamma.rs  ignore_case_str.rs  ignore_case_string.rs  mod.rs  splitter.rs  string_tokenizer.rs
prexel/src/utils/extensions/: iterator_ext.rs  mod.rs  option_ext.rs  str_ext.rs
