[package]
name = "eval"
description = "A command line app for evaluate mathematical expressions"
version = "0.1.0"
edition = "2018"

[dependencies]
prexel = { path="../prexel", features=["complex", "decimal"] }
clap = { version="3.1.2", features=["derive"]}
once_cell = "1.9.0"
crossterm = "0.23.0"
lru = "0.7.3"
ctrlc = "3.2.1"