[package]
name = "math_engine"
description = "A math expression evaluator"
version = "0.0.1"
authors = ["Freddy L"]
edition = "2018"
exclude = ["examples"]

[features]
complex = ["num-complex"]
random = ["rand"]

[dependencies]
num-traits = "0.2"
#rust_decimal = {version = "1.2.1", optional = true}
#rust_decimal_macros = {version = "1.2.1", optional = true}
rust_decimal = "1.2.1"
rust_decimal_macros = "1.2.1"
num-complex = { version = "0.2.4", optional = true}
rand = { version = "0.7", optional = true }