[package]
name = "prexel-server"
edition = "2021"
version = "0.1.0"

[dependencies]
prexel = {version = "0.1.0", features = ["decimal", "complex"] }
rocket = {version = "0.5.0-rc.1", features = ["json", "secrets"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.9.0"
uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name="prexel-server"
path="src/main.rs"