[package]
name = "prexel-server"
edition = "2021"
version = "0.1.0"

[dependencies]
prexel = {version = "0.1.3", features = ["decimal", "complex"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_path_to_error = "0.1.7"
once_cell = "1.9.0"
actix-web = "3"
actix-ratelimit = {version = "0.3.1", default-features = false, features=["memory"] }
tokio = { version = "1.16.1", features = ["full"] }
env_logger = "0.9.0"

[[bin]]
name="prexel-server"
path="src/main.rs"