[package]
name = "prexel"
description = "A math expression evaluator"
version = "0.1.0"
authors = ["Freddy L"]
edition = "2018"
license = "MIT"
categories = ["mathematics", "algorithms", "text processing", "value formatting"]
homepage = "https://crates.io/crates/prexel/"
documentation = "https://docs.rs/prexel/"
repository="https://github.com/Neo-Ciber94/prexel-rs/"

[features]
complex = ["num-complex"]
decimal = ["rust_decimal", "rust_decimal_macros"]

[dependencies]
num-traits = "0.2"
rand = "0.7"
rust_decimal = {version = "1.2.1", optional = true}
rust_decimal_macros = {version = "1.2.1", optional = true}
num-complex = { version = "0.2.4", optional = true}

[dev-dependencies]
bigdecimal = "0.1.0"
bencher = "0.1.5"

[[bench]]
name = "trait_object_vs_generic"
harness = false
